[tool]
[tool.poetry]
name = "seedsync"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8"
bottle = "*"
mkdocs = "*"
mkdocs-material = "*"
parameterized = "*"
paste = "*"
patool = "*"
pexpect = "*"
pytz = "*"
requests = "2.26.*"
tblib = "1.7.0"
timeout-decorator = "*"

[tool.poetry.dev-dependencies]
pyinstaller = "*"
testfixtures = "*"
webtest = "*"
pytest = "^6.2.1"
